--- a/page/_posts/2015-08-16-gpmr.md
+++ b/page/_posts/2015-08-16-gpmr.md
@@ -1,29 +1,19 @@
 ---
 layout: postLayout
-title : AJAX 단위테스트가 Promise를 맞이하실 때.
-tags : javascript
-category : javascript
+title : GPMR install.
+tags : gpu_mapreduce
+category : gpu_mapreduce
 ---
 
-이글은 JavaScript와 Ajax 그리고 Promise에 대한 이해가 필요합니다. <br>
-Promise패턴은 ['HTML5rocks의 번역글'](http://www.html5rocks.com/ko/tutorials/es6/promises/ "Promise HTML5Rocks번역글") 이 도움이 됩니다.
-
-<br>
-JavaScript테스트코드의 구현방법은 ['자바스크립트 테스트와 디버깅'](http://book.naver.com/bookdb/book_detail.nhn?bid=7383401) 책이나 qunit 웹사이트에서 비동기테스트 방법에 대한 설명이 잘 되어 있습니다.
-
-<br>
-Ajax 와 같은 비동기함수의 테스트코드는 어려운 편이지만 다행히 몇가지 방법이 있습니다.<br/><br/>
-
-1. 1.setTimeout으로 시간 지연 (또 다른 비동기콜백을 생성해서 순서 경쟁을 유발)
-2. 2.XMLHttpRequest 객체를 재정의하기
-3. 3.callback 함수만 따로 테스트하기
-
-<br>
-위 3가지 방법은 모두 쓸만한 방법이며 각각 장단점이 있습니다.
-
-이 중에서 1번 방법은 XHR객체를 통해 실제 통신과정 테스트가 가능하여 개인적으로 좋은 방법이라 생각합니다.
-
-1번 예제를 한번 보겠습니다.
+nvidia driver 설치 드라이버를 다운받는다. 
+<br>$cd Downloads $wget http://us.download.nvidia.com/XFree86/Linux-x86_64/343.22/NVIDIA-Linux-x86_64-343.22.run 
+<br>이전에 설치된 드라이버를 지운다 
+<br>$sudo apt-get purge nvidia* 최신 업데이트 데브 패키지를 설치한다 
+<br>$sudo apt-get install nvidia-331-updates-dev 
+<br>컴퓨터를 reboot한다 $sudo reboot
+<br>컴퓨터의 그래픽 세션을 중지시킨다 
+<br>$sudo service lightdm stop <br>다운로드한 드라이버 설치파일을 실행 가능한 파일로 바꾼다. <br>$chmod +x ~/Downloads/NVIDIA-Linux-x86_64-343.22.run <br>드라이버 설치파일을 실행한다 <br>$sudo sh ~/Downloads/NVIDIA-Linux-x86_64-343.22.run 설치확인<br> $nvidia-smi <br>그래픽카드 정보 등이 화면에 나타난다 <br>이외에도 $sudo software-properties-gtk 를 통해 설치할 수도 있다. <br>이 명령을 실행하면 gui창이 뜬다. 거기서 additional drivers를 선택하고 화면에 나타나는 여러 버전의 드라이버를 선택하면 된다. 설치가 완료돼도 Cuda 실행시 에러가 나는 경우가 있다. 이럴 경우 이해할 수 없지만 여러 버전의 gpu드라이버를 반복해서 설치하다보면 된다. <br>cuda 설치 apt-get install build-essential wget htp:// cuda download link_run nvidia <br>홈페이지에서 cuda 설치 run파일을 받는다. <br> mkdir ~/Downloads/nvidia_installers; cd ~/Downloads ./cuda_..._linux_64.run -extract=~/Downloads/nvidia_installers; sudo apt-get --purge remove nvidia-* cd ~/Downloads/nvidia_installers; 
+<br>컴퓨터의 그래픽 세션을 중지시킨다 <br>sudo service lightdm stop <br>sudo killall Xorg <br>sudo ./NVIDIA-Linux-x86_64-331.62.run <br> sudo modprobe nvidia <br>sudo ./cuda-linux64-rel-....run <br>sudo ./cuda-samples-linux-....run <br> mpi 클러스터 연결 1. 모든 기기에 openmpi설치 $sudo apt-get install libopenmpi-dev openmpi-bin openmpi-doc 2. 모든 기기에 openSSH 설치 $sudo apt-get install openssh-server openssh-client 3. 마스터(M)와 슬레이브(S) 노드를 정한다. 4. 각각의 기기에 같은 이름의 사용자를 생성한다. cuda M에 'cuda'로 접속해서 public/private key pair를 생성한다. $ssh-keygen -t dsa 이 명령은 id_dsa와 id_dsa.pub 파일을 ~/.ssh folder.에 생성한다. id_dsa는 private key이며 id_dsa.pub은 public key 이다. 이제 퍼블릭 키를 슬레이브 기기에 복사해야한다. 5. s에서 scp로 m의 id_dsa.pub를 홈 디렉토리에 카피한다. $cd $scp cuda@210.119.81.152:/home/cuda/.ssh/id_dsa.pub . 6. s에서: $cd ~/.ssh $ cat id_dsa.pub >> authorized_keys 7. 이제 M에서 s로 패스워드 없이 접속 할 수 있다. 8 M에서 mpi코드를 작성한다. 9. 컴파일한다 $ mpicxx test7.c -o test7 10. s들의 ip를 담은 hostfile을 만든다. Create a file called hostfile, which contains the slave computers in the MPI cluster: $vi hostfile $ cat hostfile //호스트파일 내용 확인 210.119.81.151 12. 소스코드를 컴파일해서 생성된 test7파일을 s로 카피한다. 13. m에서 실행한다. $mpirun -hostfile hostfile -np 2 test7 gpmr gpmr 컴파일하기 위해 cudacpp, oscpp가 필요 gpmr, cudacpp, oscpp 모두 google project에서 girhub를 통해 git clone 할 수 있음 빌드 위해 obj, bin폴더를 만들어줘야 함 cudacpp 컴파일을 위해 oscpp가 필요 AsyncFileReader test빌드시 pthread link필요 makefile에서 test 부분에 -lpthread추가 cudacpp빌드를 위해 oscpp빌드로 생성된 liboscpp.a를 bin에 갖다놓은 후 build 두 번째 호스트에 gpmr컴파일 1: 복사 $ scp -r cuda@210.119.81.152:/home/cuda/gpmr . GPMR OSCPP CUDACPP CUDPP 프로젝트 모두 복사 2. Make $ cd ~/gpmr/oscpp/oscpp; sudo make clean; sudo make; $ cp ./lib/liboscpp.a ~/gpmr/cudacpp/cudacpp/lib $ cd ~/gpmr/cudacpp/cudacpp; sudo make clean; sudo make; $ cp ./lib/*.a ~/gpmr/gpmr-master/lib $ cd gpmr; sudo make clean; sudo make all; MPICH 설치되지 않아 에러남. 3. MPI 설치 $ sudo apt-get install mpich $ sudo make all; 4. CUDA Runtime Shared Object 설정 $ cd /etc/ld.so.conf.d $ sudo vi gpmr.conf <-- /usr/local/cuda/lib64 추가 $ sudo ldconfig $ cd ~/gpmr/gpmr-master/bin/linreg 5. 테스트 수행하기 5.1 텍스트 데이터 생성 $ mkdir data $ ./gen_data_file ./data/out_1mil.dat 1048576 3 $ mpirun.mpich -np 2 ./linreg cudpp 라이브러리도 새로 컴파일 해야 함. cudpp 디렉토리로 이동하여 $ cmake -i CMakeList.txt $ sudo make; cp ./lib/libcudpp.a ~/gpmr/gpmr-master/lib
 
 <pre class="prettyprint">
 var oMyAjax = {
